--- a/Neutron blast/MainWindow.xaml
+++ b/Neutron blast/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Neutron_blast"
         mc:Ignorable="d"
-        Title="Neutron blast" Height="450" Width="800">
+        Title="Download adventure" Height="450" Width="800" Icon="icon.png">
     <Canvas Name="myCanvas" Focusable="True" KeyDown="Canvas_KeyDown" KeyUp="Canvas_KeyUp" Background="LightBlue" Margin="0,0,56,0">
 
         <Rectangle Name="background" Height="400" Width="1262" Fill="Orange" />
@@ -17,7 +17,7 @@
 
         <Rectangle Name="obstacle" Height="43" Width="48" Fill="Red" Canvas.Top="344" Canvas.Left="626" />
 
-        <Label Name="scoreText" FontWeight="Bold" Content="Score: 0" Canvas.Left="665" Canvas.Top="10" Height="26" Width="61" />
+        <Label Name="scoreText" FontWeight="Bold" Content="Score: 0" Canvas.Left="644" Canvas.Top="10" Height="36" Width="82" />
 
     </Canvas>
 </Window>
